feat(optimized): add optimized

--- a/optimized/index.html
+++ b/optimized/index.html
@@ -8,7 +8,7 @@
     .li-0 { background: gray }
   </style>
   <script src="compiled.js"></script>
-  <main id="main" myattr="cust"></main>
+  <main id="main"></main>
   <script>
     var main = document.getElementById('main')
     render(main)
